--- a/async/object.constructor/style/bookAnimation.css
+++ b/async/object.constructor/style/bookAnimation.css
@@ -8,81 +8,55 @@
   top:50%;
   left:50%;
   transform: translate(-50%, -50%);
-  width:100%;
-  max-width: 650px;
+  width:80%;
   height:auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
-.card{
+.cardBook{
   flex: 1;
   flex-basis: 300px;
   flex-grow: 0;
-  height: 440px;
-  background: #fff;
+  height: 400px;
+  background-color: #52d4ff9f;
   border: 2px solid #fff;
+  border-radius: 10px;
   box-shadow: 0px 4px 7px rgba(0,0,0,.5);
   cursor: pointer;
   transition: all .5s cubic-bezier(.8,.5,.2,1.4);
   overflow: hidden;
   position: relative;
+  padding: 15px;
 }
-.card img{
-  width: 100%;
-  height:100%;
-  transition: all .5s cubic-bezier(.8,.5,.2,1.4);
-}
-.descriptions{
-  position: absolute;
-  top:0px;
-  left:0px;
-  background-color: rgba(255,255,255,.7);
-  width:100%;
-  height:100%;
-  transition: all .7s ease-in-out;
-  padding: 20px;
-  box-sizing: border-box;
-  clip-path: circle(0% at 100% 100%);
-}
-.card:hover .descriptions{
-  left:0px;
-  transition: all .7s ease-in-out;
-  clip-path: circle(75%);
-}
-.card:hover{
+
+
+.cardBook:hover{
   transition: all .5s cubic-bezier(.8,.5,.2,1.4);
   box-shadow: 0px 2px 3px rgba(0,0,0,.3);
   transform: scale(.97);
 }
-.card:hover img{
-  transition: all .5s cubic-bezier(.8,.5,.2,1.4);
-  transform: scale(1.6) rotate(20deg);
-  filter: blur(3px);
-}
-.card h1{
-  color: #ff3838;
-  letter-spacing: 1px;
-  margin: 0px;
-}
-.card p{
+
+.cardBook p{
   line-height: 24px;
-  height: 70%;
+  height: 20%;
 }
-.card button{
+.cardBook button{
   width: fit-content;
   height: 40px;
   cursor: pointer;
   border-style: none;
-  background-color: #ff3838;
+  border-radius: 10px;
+  background-color: #ff8f8f;
   color:#fff;
   font-size: 15px;
   outline: none;
   box-shadow: 0px 2px 3px rgba(0,0,0,.4);
   transition: all .5s ease-in-out;
+  margin: 10px;
 }
-.card button:hover{
+.cardBook button:hover{
   transform: scale(.95) translateX(-5px);
   transition: all .5s ease-in-out;
 }
