--- a/async/object.constructor/style/style.css
+++ b/async/object.constructor/style/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:700');
 @import url('bookAnimation.css');
+@import url('background.css');
 
 body{
   min-height: 100vh;
@@ -16,6 +17,8 @@ body{
   background: #111;
   cursor: pointer;
   position: relative;
+  top:1%;
+  left:0.5%;
   z-index: 0;
   border-radius: 10px;
 }
@@ -67,91 +70,8 @@ body{
     100% { background-position: 0 0; }
 }
 
-
-
-@import url("https://fonts.googleapis.com/css?family=Montserrat:700");
-.hero {
-  background-color: #558dff;
+#bookForm {
   position: relative;
-  height: 100vh;
-  overflow: hidden;
-  font-family: "Montserrat", sans-serif;
-}
-
-.hero__title {
-  color: #fff;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 50px;
-  z-index: 1;
-}
-
-.cube {
-  position: absolute;
-  top: 80vh;
-  left: 45vw;
-  width: 10px;
-  height: 10px;
-  border: solid 1px #3377ff;
-  transform-origin: top left;
-  transform: scale(0) rotate(0deg) translate(-50%, -50%);
-  -webkit-animation: cube 12s ease-in forwards infinite;
-          animation: cube 12s ease-in forwards infinite;
-}
-.cube:nth-child(2n) {
-  border-color: #72f7fc;
-}
-.cube:nth-child(2) {
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
-  left: 25vw;
-  top: 40vh;
-}
-.cube:nth-child(3) {
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
-  left: 75vw;
-  top: 50vh;
-}
-.cube:nth-child(4) {
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-  left: 90vw;
-  top: 10vh;
-}
-.cube:nth-child(5) {
-  -webkit-animation-delay: 4s;
-          animation-delay: 4s;
-  left: 10vw;
-  top: 85vh;
-}
-.cube:nth-child(6) {
-  -webkit-animation-delay: 5s;
-          animation-delay: 5s;
-  left: 50vw;
-  top: 10vh;
-}
-
-@-webkit-keyframes cube {
-  from {
-    transform: scale(0) rotate(0deg) translate(-50%, -50%);
-    opacity: 1;
-  }
-  to {
-    transform: scale(20) rotate(960deg) translate(-50%, -50%);
-    opacity: 0;
-  }
-}
-
-@keyframes cube {
-  from {
-    transform: scale(0) rotate(0deg) translate(-50%, -50%);
-    opacity: 1;
-  }
-  to {
-    transform: scale(20) rotate(960deg) translate(-50%, -50%);
-    opacity: 0;
-  }
+  top:5%;
+  left:0.5%;
 }
