--- a/tictactoe/style.css
+++ b/tictactoe/style.css
@@ -9,6 +9,7 @@ html, body {
 h1{
   color: blueviolet;
   font-size: 100px;
+  margin: 20px;
 }
 
 .container {
@@ -32,4 +33,55 @@ justify-content: center;
   width:200px;
   height: auto;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 100px;
+  color: blueviolet;
+}
+
+#restartButton {
+  font-size: 50px;
+  margin: 20px;
+  background-color: pink;
+  color: white;
+}
+
+.input-form {
+  text-align: center;
+  background-color: pink;
+  padding: 20px;
+  border-radius: 10px;
+  width: 300px;
+  margin: 20px;
+  color: blueviolet;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+#submitButton {
+  background-color: #ffffff;
+  color: blueviolet;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#submitButton:hover {
+  box-shadow:  2px 2px 4px rgba(0, 0, 0, 0.2);
 }
